tests/paczka1/fuzzy1/79542631.err
Error in line 11: zg6 S610 147,8
Error in line 19: vgSReGkF A900 201,0
